--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "version": "1.0.0",
   "description": "Github issues utility application",
   "scripts": {
-    "start": "babel-node --max-old-space-size=4096 build/index.js"
+    "build-css": "node-sass-chokidar src/ -o src/",
+    "watch-css": "npm run build-css && node-sass-chokidar src/ -o src/ --watch --recursive",
+    "start-js": "babel-node --max-old-space-size=4096 build/index.js",
+    "start": "npm-run-all -p watch-css start-js"
   },
   "babel": {
     "plugins": [
@@ -42,6 +45,8 @@
   "dependencies": {
     "history": "^4.7.2",
     "lodash": "^4.17.10",
+    "node-sass-chokidar": "^1.3.3",
+    "npm-run-all": "^4.1.3",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "react-redux": "^5.0.7",
@@ -79,6 +84,8 @@
     "babel-preset-stage-2": "^6.24.1",
     "clean-webpack-plugin": "^0.1.19",
     "css-loader": "^0.28.11",
+    "eslint": "^4.19.1",
+    "eslint-plugin-react": "^7.7.0",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.11",
     "html-webpack-plugin": "^3.2.0",
